# PastePlz-backend

./: .gitignore  Cargo.toml  README.md  config.toml.example
migration/: Cargo.toml
migration/src/: lib.rs  m20230216_000001_create_paste_table.rs
src/: main.rs
src/database/: mod.rs
src/entities/: paste.rs
src/interfaces/: config.rs  mod.rs  paste.rs
src/routers/: get.rs  mod.rs  new.rs
src/sql/: database.sql  table.sql
