[package]
name = "pasteplz-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

rand = "0.8.5"

tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10.2"

actix-web = "4"
