[package]
name = "pasteplz-backend"
version = "1.0.0"
authors = ["yurzhang <yurzhang@163.com>"]
edition = "2021"

[workspace]
members = [".", "migration"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.8.5"
time = { version = "0.3.18", features = ["serde-human-readable"] }
tokio = { version = "1.25.0", features = [
  "rt-multi-thread",
  "macros",
  "parking_lot",
] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }

[dependencies.sea-orm]
version = "0.11.0"
default-features = false
features = ["macros", "with-time", "sqlx-sqlite", "runtime-tokio-rustls"]

[dependencies.axum]
version = "0.6.6"
default-features = false
features = ["http1", "json", "tokio"]
